--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@ sudo: required
 
 services:
   - docker
-  - mongodb
 
 before_install:
   - git checkout -qf $TRAVIS_BRANCH
-  - sed -i -e "s/mongo:2/localhost:2/" $TRAVIS_BUILD_DIR/test/support/test_mongo_config.yml
 install:
   - docker build -t thegem .
 
 script:
-  - docker run -it --rm --net=host -v $TRAVIS_BUILD_DIR:/opt/project/code thegem bundle exec rake
+  - docker run -it --rm -v $TRAVIS_BUILD_DIR:/opt/project/code thegem bundle exec rake
   - docker run -it --rm -e CODECLIMATE_REPO_TOKEN=$CC -v $TRAVIS_BUILD_DIR:/opt/project/code thegem bundle exec codeclimate-test-reporter
 
 deploy:
